--- a/templates/articles.html
+++ b/templates/articles.html
@@ -41,7 +41,8 @@
                           <td>{{ article[2] }}</td>
                           <td>{{ article[3] }}</td>
                           <td>{{ article[4] }}</td>
-                          <td><button type="button" class="btn btn-warning">Edit</button>
+                          <td>
+                            <a href="/{{ article[0] }}/edit"><button type="button" class="btn btn-warning">Edit</button></a>
                           
                             <form action="/delete/{{article[0]}}" style="margin-top: 10%;" method ="POST" onsubmit="return confirm('정말 삭제하시겠습니까?')">
                               <button type="submit" class="btn btn-danger">DEL</button>
